--- a/hw1/catalog/catalog.html
+++ b/hw1/catalog/catalog.html
@@ -13,7 +13,7 @@
             <a href="#">Каталог</a>
         </div>
         <h1>Каталог</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti architecto porro quasi fugiat accusamus reiciendis rerum aspernatur repudiandae quas nostrum, voluptate eaque laborum, atque ex saepe aliquid dicta, asperiores dignissimos.</p>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti architecto porro quasi fugiat accusamus reiciendis rerum aspernatur repudiandae quas nostrum, voluptate eaque laborum, atque ex saepe aliquid dicta, asperiores dignissimos.</p>
         <ul class="product-list">
             <li class="product-card">
                 <a class="product-card-link">
