--- a/hw1/index.html
+++ b/hw1/index.html
@@ -13,11 +13,11 @@
             <a href="./catalog/catalog.html">Каталог</a>
         </div>
         <h1>Главная страница</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quasi aperiam pariatur, cupiditate commodi exercitationem eos quisquam fugiat amet maiores aliquam veniam nobis harum praesentium. Vel et quam nesciunt officiis.</p>
+        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quasi aperiam pariatur, cupiditate commodi exercitationem eos quisquam fugiat amet maiores aliquam veniam nobis harum praesentium. Vel et quam nesciunt officiis.</p>
         <br>
-        <h2>Добро пожаловать на сайт</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim animi quod ipsam, quae asperiores hic delectus voluptatum. Voluptatibus, autem pariatur quo quod hic harum adipisci veritatis quasi magnam sed neque.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio eveniet, quisquam, autem facilis voluptas accusantium dolorem cum qui facere ullam nihil impedit deserunt voluptate ducimus. Officia voluptatibus quidem animi exercitationem?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, vel deserunt labore, sed eaque harum sunt eius et ab deleniti alias. Est quo expedita repellendus, magni necessitatibus debitis pariatur vero.</p>
+        <h2 class="welcome">Добро пожаловать на сайт</h2>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim animi quod ipsam, quae asperiores hic delectus voluptatum. Voluptatibus, autem pariatur quo quod hic harum adipisci veritatis quasi magnam sed neque.</p>
+        <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio eveniet, quisquam, autem facilis voluptas accusantium dolorem cum qui facere ullam nihil impedit deserunt voluptate ducimus. Officia voluptatibus quidem animi exercitationem?</p>
+        <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, vel deserunt labore, sed eaque harum sunt eius et ab deleniti alias. Est quo expedita repellendus, magni necessitatibus debitis pariatur vero.</p>
     </body>
 </html>
