--- a/hw1/index.html
+++ b/hw1/index.html
@@ -12,7 +12,7 @@
             <a href="#">Главная</a>
             <a href="./catalog/catalog.html">Каталог</a>
         </div>
-        <h1>Главная страница</h1>
+        <h1 class="header">Главная страница</h1>
         <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quasi aperiam pariatur, cupiditate commodi exercitationem eos quisquam fugiat amet maiores aliquam veniam nobis harum praesentium. Vel et quam nesciunt officiis.</p>
         <br>
         <h2 class="welcome">Добро пожаловать на сайт</h2>
