--- a/hw1/catalog/catalog.html
+++ b/hw1/catalog/catalog.html
@@ -12,7 +12,7 @@
             <a href="../index.html">Главная</a>
             <a href="#">Каталог</a>
         </div>
-        <h1>Каталог</h1>
+        <h1 class="header">Каталог</h1>
         <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti architecto porro quasi fugiat accusamus reiciendis rerum aspernatur repudiandae quas nostrum, voluptate eaque laborum, atque ex saepe aliquid dicta, asperiores dignissimos.</p>
         <ul class="product-list">
             <li class="product-card">
