--- a/hw6/index.html
+++ b/hw6/index.html
@@ -78,6 +78,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img class="product_image" src="./img/man1.png" alt="man">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
@@ -88,6 +92,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img src="./img/woman1.png" alt="woman">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
@@ -98,6 +106,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img src="./img/man2.png" alt="man">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
@@ -108,6 +120,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img src="./img/man3.png" alt="man">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
@@ -118,6 +134,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img src="./img/woman2.png" alt="woman">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
@@ -128,6 +148,10 @@
                 <div class="product_card">
                     <div class="prod_image_cont">
                         <img src="./img/woman3.png" alt="woman">
+                        <button class="btn">
+                            <img src="./img/cart.png" alt="cart"> 
+                            Add to Cart
+                        </button>
                     </div>
                     <div class="card_text">
                         <h3>ELLERY X M'O CAPSULE</h3>
